# glmath

./: .gitignore  Cargo.toml  README.md
benches/: scalar.rs  vector.rs  vector_random.rs
src/: lib.rs  matrix.rs  quaternions.rs  scalar.rs  vector.rs
