[package]
name = "glmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = {version = "1.0.*"}
num = {version = "0.4.2"}
rand = {version = "0.8.*",optional = true}
once_cell = {version = "1.19.*",optional = true}

[features]
random_vectors = ["rand","once_cell"]


[dev-dependencies]
approx = "0.5.*"
