[package]
name = "glmath"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = {version = "1.0.*"}
num = {version = "0.4.*"}
rand = {version = "0.8.*",optional = true}
once_cell = {version = "1.19.*",optional = true}
bytemuck = {version = "1.22.*",optional = true}

[features]
default = ["quaternions"]
random_vectors = ["dep:rand","dep:once_cell"]
quaternions = []
bytemuck = ["dep:bytemuck"]

[dev-dependencies]
approx = {version = "0.5.*"}
criterion = { version = "0.5.*"}
rand ={ version = "0.8.*"}

[profile.bench]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[[bench]]
name = "vector"
harness = false
required-features = ["random_vectors"]

[[bench]]
name = "vector_random"
harness = false
required-features = ["random_vectors"]

[[bench]]
name = "scalar"
harness = false
required-features = ["random_vectors"]